로고사진, 어플명 변경 반영

--- a/Kotlin-TabLayout-master/Kotlin-TabLayout-master/app/src/main/res/values/strings.xml
+++ b/Kotlin-TabLayout-master/Kotlin-TabLayout-master/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">Kotlin-TabLayout</string>
+    <string name="app_name">SOHA</string>
 
     <string name="title_home">Home</string>
     <string name="title_aboutUs">About Us</string>
